--- a/Adapter/res/layout/list_item.xml
+++ b/Adapter/res/layout/list_item.xml
@@ -1,13 +1,55 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/folder_item"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-    <TextView
-        android:id="@+id/text_hello"
-        android:layout_width="wrap_content"
+    android:layout_height="90dp"
+    android:background="#ffffff" 
+    android:layout_marginTop="50dp"
+    android:layout_marginBottom="50dp"
+    android:orientation="horizontal" >
+    
+    <ImageView 
+        android:id="@+id/folder_icon"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_centerVertical="true"
+        android:src="@drawable/icon_folder_green"
+        android:scaleType="centerCrop"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:contentDescription="@null"/>            
+        
+	<ImageView  
+	    android:id="@+id/folder_arrow"
+	    style="@style/icon_arrow"
+	    android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+		android:layout_marginRight="16dp"
+	    android:contentDescription="@null" /> 
+	    
+   <LinearLayout 
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+	 	android:layout_centerVertical="true" 
+	 	android:layout_toLeftOf="@id/folder_arrow"
+        android:layout_toRightOf="@id/folder_icon"
+     	android:layout_marginRight="10dp"
+		android:orientation="vertical">
+        
+        <TextView
+			android:id="@+id/folder_name"
+			android:gravity="left"
+			style="@style/list_item_title"
+			android:layout_marginLeft="14dp"
+			android:text="默认文件夹"/>
+         <TextView
+			android:id="@+id/folder_size"
+			android:gravity="left"
+			style="@style/list_item_info"
+			android:layout_marginLeft="14dp"
+			android:text="共0个文件，占用0.0M"/>
+    </LinearLayout>
+    
    
-
 </RelativeLayout>
